# sentinel-forge

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  package.json  pnpm-lock.yaml  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: detector.yml  documentation.yml  reporting-or-tooling.yml  research.yml
.github/workflows/: ci.yml  demo-reports.yml
.turbo/cache/: 40532b1a40c3078e-manifest.json  40532b1a40c3078e-meta.json  40532b1a40c3078e.tar.zst  531fc4a375e75706-manifest.json  531fc4a375e75706-meta.json  590478a86c4ede4b-manifest.json  590478a86c4ede4b-meta.json  590478a86c4ede4b.tar.zst  996fc849e01b5aab-manifest.json  996fc849e01b5aab-meta.json  996fc849e01b5aab.tar.zst  9c9829b38d7c683d-manifest.json  9c9829b38d7c683d-meta.json  9c9829b38d7c683d.tar.zst  (+9 more)
engines/static-analyzer/: Cargo.toml
engines/static-analyzer/src/: lib.rs  main.rs
engines/static-analyzer/src/ast/: mod.rs
engines/static-analyzer/src/cli/: mod.rs
engines/static-analyzer/src/detectors/: arithmetic.rs  authorization.rs  dos.rs  mod.rs  privilege.rs  storage.rs  validation.rs
engines/static-analyzer/src/ir/: mod.rs
engines/static-analyzer/src/reporting/: mod.rs
engines/static-analyzer/src/rules/: mod.rs
engines/static-analyzer/src/tracing/: mod.rs
engines/static-analyzer/src/utils/: mod.rs
engines/static-analyzer/tests/: integration.rs
engines/static-analyzer/tests/contracts/: unbounded_loop.rs
engines/static-analyzer/tests/regressions/: guarded_admin.rs
examples/: README.md
plugins/: README.md  registry.json
(+94 files in other folders)
