[package]
name = "static-analyzer"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "visit"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "sentinel-forge"
path = "src/main.rs"
